# w3bstream-vm

./: .gitignore  Dockerfile  README.md  build.rs
.github/workflows/: gnark-image.yaml  halo2-image.yaml  risc0-image.yaml  wasm-image.yaml
gnark-server/: Dockerfile  Makefile  README.md  go.mod  go.sum
gnark-server/api/: grpc.go
gnark-server/cmd/: main.go
gnark-server/proto/: vm_runtime.pb.go  vm_runtime_grpc.pb.go
gnark-server/prover/: groth16.go  groth16_test.go  manager.go  manager_test.go
halo2/: Cargo.toml
halo2-server/: Cargo.toml
halo2-server/src/: main.rs
halo2-server/src/grpc/: server.rs
halo2-wasm-node-server/: Dockerfile  package-lock.json  package.json  start.sh
halo2-wasm-node-server/src/: server.js  wasm_instance.js
halo2-wasm-node-server/tests/: 10001.json  client.js  e2e.js
halo2/src/grpc/: vm_runtime.rs
proto/: vm_runtime.proto
risc0-server/: .env  BaseDockerfile  Cargo.toml  Dockerfile  Makefile  README.md  verify_contract_abi.json
risc0-server/migrations/2024-03-06-133947_risc0-server/: down.sql  up.sql
risc0-server/migrations/2024-03-28-110112_risc0-server/: up.sql
risc0-server/src/: lib.rs  main.rs
risc0-server/src/core/: mod.rs  prove.rs  prover.rs
risc0-server/src/db/: mod.rs  models.rs  pgdb.rs  schema.rs
risc0-server/src/grpc/: server.rs
risc0-server/src/handlers/: proof.rs
risc0-server/src/model/: models.rs
risc0-server/src/tests/: 10000.json  hello_guest  mock.rs  mod.rs
risc0-server/src/tools/: mod.rs
rust-grpc/: Cargo.toml  build.rs
rust-grpc/src/grpc/: mod.rs  vm.rs  vm_runtime.rs
src/: main.rs
src/grpc/: ._server.rs  mod.rs  server.rs
wasm-server/: Cargo.toml  Dockerfile
wasm-server-go/: Dockerfile  go.mod  go.sum
wasm-server-go/cmd/: main.go
wasm-server-go/proto/: vm_runtime.pb.go  vm_runtime_grpc.pb.go
wasm-server-go/type/wasm/: context.go  instance.go
wasm-server-go/vm/: instance_new.go
wasm-server-go/vm/wasmtime/: instance.go  instance_exports.go  instance_runtime.go
wasm-server/src/: lib.rs  main.rs
wasm-server/src/grpc/: server.rs
wasm-server/src/tests/: 10003.json  mock.rs  mod.rs
wasm-server/src/wasmtime/: instance.rs
