[package]
name = "halo2-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8"
tonic-reflection = "0.6.0"
prost = "0.11"
libloading = "0.7"
tempfile = "3.2.0"
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-build = "0.8"