[package]
name = "risc0-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
risc0-zkvm ={ version = "0.21" }
bonsai-ethereum-relay = { version = "0.6.1" }
bonsai-sdk = { version = "0.7" }

rust-grpc = { path = "../rust-grpc" }

axum = { version = "0.6.20", features = ["multipart","headers", "ws"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
futures = "0.3"
tokio-stream = "0.1"
headers = "0.3"
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
axum_typed_multipart = "0.8.0"
tempfile = "3.7.1"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
bincode = "1.3"
anyhow = { version = "1.0", default-features = false }
bytemuck = { version = "1.13", features = ["extern_crate_alloc"] }
ethers = { version = "2.0", features = ["rustls", "ws"] }
web3 = "0.19.0"
flate2 = "1.0.20"
rustc-hex = "2.1.0"
tonic = "0.8"
tonic-reflection = "0.6.0"
prost = "0.11"

[dev-dependencies]
lazy_static = "=1.4.0"

[build-dependencies]
tonic-build = "0.8"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]