[package]
name = "risc0-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
risc0-zkvm = { version = "1.0" }
# bonsai-ethereum-relay = { version = "0.6.1" }
# risc0-ethereum-relay = { git = "https://github.com/risc0/risc0-ethereum.git", rev = "v0.10.0", package = "risc0-ethereum-relay" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.0.0" }
rust-grpc = { path = "../rust-grpc" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "tracing-log",
    "fmt",
] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
dotenvy = "0.15"
anyhow = { version = "1.0", default-features = false }
ethers = { version = "2.0", features = ["rustls", "ws"] }
web3 = "0.19.0"
flate2 = "1.0.20"
tonic = "0.12.3"
lazy_static = "=1.4.0"
regex = "1.11.0"
dyn-clone = "1.0.17"

[dev-dependencies]
lazy_static = "=1.4.0"


[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
