[package]
name = "wasm-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-grpc = { path = "../rust-grpc" }
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
anyhow = "1.0"
wasmtime = "13.0.0"
wasmtime-wasi = "13.0.0"
tonic = "0.8"
tonic-reflection = "0.6.0"
prost = "0.11"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
flate2 = "1.0.20"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
lazy_static = "=1.4.0"